--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -16,3 +16,6 @@ jobs:
         with:
           go-version: '^1.18.1' # The Go version to download (if necessary) and use.
       - run: go version
+
+      - name: Run Go Tests
+        run: make go-tests
