--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -19,3 +19,17 @@ jobs:
 
       - name: Run Go Tests
         run: make go-tests
+
+  scan-container:
+    runs-on: windows-latest
+    needs:
+      - build
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.18.1' # The Go version to download (if necessary) and use.
+      - run: go version
+
+      - name: Run Go Tests
+        run: make go-tests
