--- a/.github/workflows/buildTest.yml
+++ b/.github/workflows/buildTest.yml
@@ -7,7 +7,7 @@ on:
     
     
 jobs:
-  build:
+  build-linux:
     runs-on: ubuntu-latest
     
     steps:
@@ -20,10 +20,24 @@ jobs:
       - name: Run Go Tests
         run: make go-tests
 
-  scan-container:
+  build-windows:
     runs-on: windows-latest
     needs:
-      - build
+      - build-linux
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '^1.18.1' # The Go version to download (if necessary) and use.
+      - run: go version
+
+      - name: Run Go Tests
+        run: make go-tests
+
+  build-macos:
+    runs-on: macos-latest
+    needs:
+      - build-linux
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v3
